--- a/output/output.html
+++ b/output/output.html
@@ -10,7 +10,7 @@
     <body style="margin:0;padding:0;">
         <div style="width:100%; margin:40px auto; font-size:20px; color: #5f5e5e; text-align:center">
             <span>今日: </span>
-            <span style="font-size: 24px; color: #DD4949;">2025 / 12 / 21</span>
+            <span style="font-size: 24px; color: #DD4949;">2025 / 12 / 22</span>
         </div>
         <div style="width:100%; margin:0 auto; color:#5f5e5e;text-align:center">
             <span style="display: block; color:#676767; font-size:20px"></span>
@@ -20,10 +20,9 @@
         <div style="text-align: center; margin: 35px 0;">
             <span style="display:block; margin-top: 55px; color: #676767; font-size:15px">ONE · 一个</span>
             <br/>
-            <div style="margin:10px auth; width:85%; color:#5f5e5e">去岁冬至日，拜我立我旁。
-祝尔愿尔贵，仍且寿命长。</div>
-            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2025 / 12 / 21</span>
-            <img src="http://image.wufazhuce.com/FrywzbpwzaEi7KFHNcquhswvdltr" style="width: 100%; margin-top: 10px;" alt="">
+            <div style="margin:10px auth; width:85%; color:#5f5e5e">离开自己的老家太远不是什么好事情，那样你就会忘记自己是谁。</div>
+            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2025 / 12 / 22</span>
+            <img src="http://image.wufazhuce.com/FvUDw_Jp6QnGACOOmQ-E5HWWzSv-" style="width: 100%; margin-top: 10px;" alt="">
             <span style="color: #b0b0b0; font-size:13px">摄影 </span>
         </div>
     </body>
