--- a/output/output.html
+++ b/output/output.html
@@ -10,7 +10,7 @@
     <body style="margin:0;padding:0;">
         <div style="width:100%; margin:40px auto; font-size:20px; color: #5f5e5e; text-align:center">
             <span>今日: </span>
-            <span style="font-size: 24px; color: #DD4949;">2025 / 12 / 27</span>
+            <span style="font-size: 24px; color: #DD4949;">2025 / 12 / 28</span>
         </div>
         <div style="width:100%; margin:0 auto; color:#5f5e5e;text-align:center">
             <span style="display: block; color:#676767; font-size:20px"></span>
@@ -20,10 +20,12 @@
         <div style="text-align: center; margin: 35px 0;">
             <span style="display:block; margin-top: 55px; color: #676767; font-size:15px">ONE · 一个</span>
             <br/>
-            <div style="margin:10px auth; width:85%; color:#5f5e5e">我不懂什么好人，坏人，人太多了，很难分。你分得清海跟天吗？</div>
-            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2025 / 12 / 27</span>
-            <img src="http://image.wufazhuce.com/ForOMConGZc3iJqdOq3p9vw6k8g3" style="width: 100%; margin-top: 10px;" alt="">
-            <span style="color: #b0b0b0; font-size:13px">摄影 </span>
+            <div style="margin:10px auth; width:85%; color:#5f5e5e">当白昼谢幕，他们的舞台才刚刚亮灯。有人用听诊器捕捉深夜的心跳，有人在监视器前守护居民的安眠。月光是他们的日光，寂静是他们的背景音。在应该安睡的时刻，这些醒着的人，正进行着城市另一种必需的光合作用，用不合规律的清醒谋一份生活。
+
+本周，ONE与你一同关注那些夜班故事。</div>
+            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2025 / 12 / 28</span>
+            <img src="http://image.wufazhuce.com/FtLiOp95PMzWbtTcuzsFYiVSYYkx" style="width: 100%; margin-top: 10px;" alt="">
+            <span style="color: #b0b0b0; font-size:13px">周日推荐 </span>
         </div>
     </body>
 </html>
