--- a/output/output.html
+++ b/output/output.html
@@ -10,7 +10,7 @@
     <body style="margin:0;padding:0;">
         <div style="width:100%; margin:40px auto; font-size:20px; color: #5f5e5e; text-align:center">
             <span>今日: </span>
-            <span style="font-size: 24px; color: #DD4949;">2025 / 12 / 30</span>
+            <span style="font-size: 24px; color: #DD4949;">2025 / 12 / 31</span>
         </div>
         <div style="width:100%; margin:0 auto; color:#5f5e5e;text-align:center">
             <span style="display: block; color:#676767; font-size:20px"></span>
@@ -20,9 +20,10 @@
         <div style="text-align: center; margin: 35px 0;">
             <span style="display:block; margin-top: 55px; color: #676767; font-size:15px">ONE · 一个</span>
             <br/>
-            <div style="margin:10px auth; width:85%; color:#5f5e5e">人们意识不到自己有多么脆弱，别看他们穿着衬衫皮鞋，提着公文包，这个饥饿而残酷的世界照样能把他们洗劫一空，落到跟乞丐们相同的境地。</div>
-            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2025 / 12 / 30</span>
-            <img src="http://image.wufazhuce.com/Fph2tISUJ0jjw0iYdvHqq0TZFPwr" style="width: 100%; margin-top: 10px;" alt="">
+            <div style="margin:10px auth; width:85%; color:#5f5e5e">去年今夜。同醉月明花树下。此夜江边，月暗长堤柳暗船。
+故人何处？带我离愁江外去。来岁花前，又是今年忆去年。</div>
+            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2025 / 12 / 31</span>
+            <img src="http://image.wufazhuce.com/FsHAl78YrJ6mZRLSgFwWtuJpBVsm" style="width: 100%; margin-top: 10px;" alt="">
             <span style="color: #b0b0b0; font-size:13px">摄影 </span>
         </div>
     </body>
