--- a/output/output.html
+++ b/output/output.html
@@ -10,7 +10,7 @@
     <body style="margin:0;padding:0;">
         <div style="width:100%; margin:40px auto; font-size:20px; color: #5f5e5e; text-align:center">
             <span>今日: </span>
-            <span style="font-size: 24px; color: #DD4949;">2026 / 01 / 08</span>
+            <span style="font-size: 24px; color: #DD4949;">2026 / 01 / 09</span>
         </div>
         <div style="width:100%; margin:0 auto; color:#5f5e5e;text-align:center">
             <span style="display: block; color:#676767; font-size:20px"></span>
@@ -20,9 +20,9 @@
         <div style="text-align: center; margin: 35px 0;">
             <span style="display:block; margin-top: 55px; color: #676767; font-size:15px">ONE · 一个</span>
             <br/>
-            <div style="margin:10px auth; width:85%; color:#5f5e5e">我喜欢看地铁里的天气预报。主持人说，我市今天气温如何如何，我市明天气温如何如何。很亲切，好像这座城市真属于我。</div>
-            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2026 / 01 / 08</span>
-            <img src="http://image.wufazhuce.com/FuI5zMJll6Byx_ud5ia2wrW7AhuY" style="width: 100%; margin-top: 10px;" alt="">
+            <div style="margin:10px auth; width:85%; color:#5f5e5e">这一代人总觉得人人都能活到八九十岁，学界更是许多精力充沛的高寿老人，常常让人忘记死能这样突然。高寿与顺利的学术道路一样，都可遇不可求。那些早早死去的人，常是早早被遗忘了。</div>
+            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2026 / 01 / 09</span>
+            <img src="http://image.wufazhuce.com/FjwfMBn7Bpy8jPerx2aswYOM63KJ" style="width: 100%; margin-top: 10px;" alt="">
             <span style="color: #b0b0b0; font-size:13px">摄影 </span>
         </div>
     </body>
