--- a/output/output.html
+++ b/output/output.html
@@ -10,7 +10,7 @@
     <body style="margin:0;padding:0;">
         <div style="width:100%; margin:40px auto; font-size:20px; color: #5f5e5e; text-align:center">
             <span>今日: </span>
-            <span style="font-size: 24px; color: #DD4949;">2026 / 01 / 11</span>
+            <span style="font-size: 24px; color: #DD4949;">2026 / 01 / 12</span>
         </div>
         <div style="width:100%; margin:0 auto; color:#5f5e5e;text-align:center">
             <span style="display: block; color:#676767; font-size:20px"></span>
@@ -20,11 +20,10 @@
         <div style="text-align: center; margin: 35px 0;">
             <span style="display:block; margin-top: 55px; color: #676767; font-size:15px">ONE · 一个</span>
             <br/>
-            <div style="margin:10px auth; width:85%; color:#5f5e5e">人生这本书，翻过2025这一章节，三百多页的晨昏，我们在字句的车厢里途经无数他者的人生，于各自现实的站台停靠又启程。时间不曾往返，却允许我们在故事里无数次抵达站点，为遗憾找一个结局，替远方寻一处开端。经过编辑部评选，我们从2025年的作品中精选出年度佳作，来看看有没有你心仪的篇目吧。
-2026，故事的星空依旧灿烂，ONE愿作为星图，陪你继续浪迹在文字的宇宙。</div>
-            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2026 / 01 / 11</span>
-            <img src="http://image.wufazhuce.com/FvOcWaTjp9wensbEewmoeDWWhOpW" style="width: 100%; margin-top: 10px;" alt="">
-            <span style="color: #b0b0b0; font-size:13px">周日推荐 </span>
+            <div style="margin:10px auth; width:85%; color:#5f5e5e">幸福也并不是人生义务。</div>
+            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2026 / 01 / 12</span>
+            <img src="http://image.wufazhuce.com/FqjNeFrHNb-RM2KaMcwj9KH12EP2" style="width: 100%; margin-top: 10px;" alt="">
+            <span style="color: #b0b0b0; font-size:13px">摄影 </span>
         </div>
     </body>
 </html>
