--- a/output/output.html
+++ b/output/output.html
@@ -10,7 +10,7 @@
     <body style="margin:0;padding:0;">
         <div style="width:100%; margin:40px auto; font-size:20px; color: #5f5e5e; text-align:center">
             <span>今日: </span>
-            <span style="font-size: 24px; color: #DD4949;">2026 / 01 / 13</span>
+            <span style="font-size: 24px; color: #DD4949;">2026 / 01 / 14</span>
         </div>
         <div style="width:100%; margin:0 auto; color:#5f5e5e;text-align:center">
             <span style="display: block; color:#676767; font-size:20px"></span>
@@ -20,9 +20,9 @@
         <div style="text-align: center; margin: 35px 0;">
             <span style="display:block; margin-top: 55px; color: #676767; font-size:15px">ONE · 一个</span>
             <br/>
-            <div style="margin:10px auth; width:85%; color:#5f5e5e">我并不因为孤独而痛苦，即使有时会意识到这种孤独正在瓦解我生命的基本元素。我感觉到它正把我一块一块地分解拆卸，使我从内部瓦解，去除我不再发挥作用的重要组成部分。</div>
-            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2026 / 01 / 13</span>
-            <img src="http://image.wufazhuce.com/FmWK-rPao2ccVuDyGY_-7Z96GM6e" style="width: 100%; margin-top: 10px;" alt="">
+            <div style="margin:10px auth; width:85%; color:#5f5e5e">青春流逝，谁又能眼睁睁看着时间呼啸而过，却不耿耿于怀？</div>
+            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2026 / 01 / 14</span>
+            <img src="http://image.wufazhuce.com/FmWy1BrdlpV2dC-J_IkYRx3UwuEC" style="width: 100%; margin-top: 10px;" alt="">
             <span style="color: #b0b0b0; font-size:13px">摄影 </span>
         </div>
     </body>
